// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmptyState > renders without error 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center gap-[16px] w-[100%]"
  >
    <div
      class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center gap-[8px]"
    >
      <div
        class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center gap-[8px] mt-[8px]"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral2)] text-center"
        >
          description
        </span>
      </div>
    </div>
    <div
      class="flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row gap-[16px]"
    />
  </div>
</DocumentFragment>
`;

exports[`ErrorState > renders without error 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 grow items-center justify-center gap-[24px] p-[12px] w-[100%]"
  >
    <div
      class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center gap-[16px]"
    >
      <div
        class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center gap-[8px]"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral2)] text-center"
        >
          Something went wrong.
        </span>
      </div>
    </div>
    <div
      class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center gap-[16px]"
    />
  </div>
</DocumentFragment>
`;

exports[`Header > renders without error 1`] = `
<DocumentFragment>
  <div
    class="[container-name:true] flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 [container-type:normal] rounded-[12px] [cursor:pointer] bg-transparent px-[16px] py-[12px] border-surface3 border-b-[0.25px] [transition:transform_80ms_ease-in-out,_opacity_80ms_ease-in-out] active:opacity-[0.75] active:[transform:scale(0.98)] focus-visible:[transform:scaleX(0.98)_scaleY(0.98)] focus-visible:[outline-offset:1px] focus-visible:[outline-style:solid] focus-visible:[outline-width:1px] focus-visible:[outline-color:var(--neutral3)] group"
    role="button"
    tabindex="0"
  >
    <div
      class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between gap-[16px]"
    >
      <div
        class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
      >
        <div
          class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[8px]"
        >
          <span
            class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:20px] [font-weight:485] [color:var(--stext-neutral2)]"
          >
            title
          </span>
        </div>
      </div>
      <div
        class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center rounded-[999999px] [transform:var(--c-tr)] [transition:var(--c-t)]"
        style="--c-tr: rotate(180deg); --c-t: transform 100ms cubic-bezier(0.17, 0.67, 0.45, 1);"
      >
        <div
          fill="none"
          stroke-width="8"
          style="width: 20px; height: 20px; color: rgba(255, 255, 255, 0.65);"
          viewbox="0 0 24 24"
        >
          <div
            clip-rule="evenodd"
            d="M15.7071 5.29289C16.0976 5.68342 16.0976 6.31658 15.7071 6.70711L10.4142 12L15.7071 17.2929C16.0976 17.6834 16.0976 18.3166 15.7071 18.7071C15.3166 19.0976 14.6834 19.0976 14.2929 18.7071L8.2929 12.7071C7.9024 12.3166 7.9024 11.6834 8.2929 11.2929L14.2929 5.29289C14.6834 4.90237 15.3166 4.90237 15.7071 5.29289Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InlineErrorState > renders without error 1`] = `
<DocumentFragment>
  <div
    class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row grow items-center justify-between gap-[24px] p-[12px] w-[100%] bg-surface2 rounded-[16px]"
  >
    <div
      class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] flex-row shrink items-center gap-[8px]"
    >
      <div
        data-testid="error-icon"
        fill="currentColor"
        stroke-width="8"
        style="width: 16px; height: 16px; color: rgba(255, 255, 255, 0.38);"
        viewbox="0 0 24 24"
      >
        <div
          d="M21.6074 17.1522L15.0004 4.79599C13.7204 2.40199 10.2814 2.40199 9.00042 4.79599L2.39349 17.1522C1.21949 19.3482 2.81353 22.0001 5.30853 22.0001H18.6923C21.1863 22.0001 22.7814 19.3472 21.6074 17.1522ZM11.2504 10.0001C11.2504 9.58609 11.5864 9.25009 12.0004 9.25009C12.4144 9.25009 12.7504 9.58609 12.7504 10.0001V14.0001C12.7504 14.4141 12.4144 14.7501 12.0004 14.7501C11.5864 14.7501 11.2504 14.4141 11.2504 14.0001V10.0001ZM12.0204 18.0001C11.4684 18.0001 11.0153 17.5521 11.0153 17.0001C11.0153 16.4481 11.4584 16.0001 12.0104 16.0001H12.0204C12.5734 16.0001 13.0204 16.4481 13.0204 17.0001C13.0204 17.5521 12.5724 18.0001 12.0204 18.0001Z"
          fill="currentColor"
        />
      </div>
      <span
        class="[display:inline] box-border m-0 [word-wrap:break-word] [font-family:var(--stext-font-book)] text-[16px] [line-height:20px] [font-weight:485] [color:var(--stext-neutral1)] text-center max-w-full overflow-hidden text-ellipsis whitespace-nowrap"
      >
        Oops! Something went wrong.
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Shadow > backgroundColor > renders with backgroundColor when backgroundColor is passed 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 p-[12px] bg-[color:var(--c-bg)] rounded-[16px] [box-shadow:var(--c-bosh)]"
    style="--c-bg: red; --c-bosh: 0px 2px 10px color-mix(in srgb, var(--color-black) 0.75%, transparent);"
  />
</DocumentFragment>
`;

exports[`Shadow > renders without error 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 p-[12px] rounded-[16px] [box-shadow:var(--c-bosh)]"
    style="--c-bosh: 0px 2px 10px color-mix(in srgb, var(--color-black) 0.75%, transparent); background-color: rgba(255, 255, 255, 0.102);"
  />
</DocumentFragment>
`;
